# SPOK

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: CMakeLists.txt
src/SPOK/: CMakeLists.txt
src/SPOK/src/: SPOKApi.cpp
src/SPOKClient/: CMakeLists.txt
src/SPOKClient/src/: Blob.cpp  Blob.h  SPOKClient.cpp  SPOKClientApi.cpp  StandardLib.h  Util.h
src/SPOKCore/: CMakeLists.txt
src/SPOKCore/src/: BCryptUtil.cpp  HasherUtil.cpp  NCryptUtil.cpp  SPOKBlob.cpp  SPOKCore.cpp  SPOKError.cpp  SPOKPcrs.cpp  TPM_20.cpp  TcgLog.cpp  TcgLog.h  Util.h
src/SPOKServer/: CMakeLists.txt
src/SPOKServer/src/: AttestationManager.cpp  AttestationManager.h  AttestationVariants.h  IAttestation.cpp  IAttestation.h  SPOKServer.cpp  SPOKServerApi.cpp  SPOK_AIKKeyAttestation.cpp  SPOK_AIKKeyAttestation.h  SPOK_AIKPlatformAttestation.cpp  SPOK_AIKPlatformAttestation.h  SPOK_AIKTpmAttestation.cpp  SPOK_AIKTpmAttestation.h  StandardLib.h  Util.h
src/SPOKTest/: CMakeLists.txt
src/SPOKTest/src/: main.cpp
src/SPOKTool/: CMakeLists.txt
src/SPOKTool/src/: ArgumentParser.cpp  ArgumentParser.h  main.cpp  stdlib.h  util.h
src/SPOKTool/src/Action/: CreateAikAction.cpp  CreateAikAction.h  ISPOKAction.h
src/include/SPOK/: BCryptUtil.h  HasherUtil.h  NCryptUtil.h  SPOKApi.h  SPOKApiTypes.h  SPOKBlob.h  SPOKCore.h  SPOKError.h  SPOKNonce.h  SPOKPcrs.h  TPMAlgId.h  TPM_20.h  TcgLog.h
src/include/SPOKClient/: SPOKClient.h  SPOKClientApi.h
src/include/SPOKServer/: SPOKServer.h  SPOKServerApi.h
